@@ -36,7 +36,7 @@ you want    to find earlier  versions of Vegastrike, visit our <a href="http://s
         </tbody>
       </table>
       <ul>
-<!--          <li>Link 1</li>	-->
+<!--          <li>Link 1</li>        -->
         <li>
           <p><font face="Arial"><font color="#ffffff"><font><a href="http://prdownloads.sourceforge.net/vegastrike/vegastrike-0.2.1.zip">
    Vegastrike 0.2.1 Windows Beta</a>
@@ -61,7 +61,7 @@ you want    to find earlier  versions of Vegastrike, visit our <a href="http://s
         </tbody>
       </table>
       <ul>
-<!--          <li>Link 1</li>	-->         You can grab either the source
+<!--          <li>Link 1</li>        -->         You can grab either the source
 code:<br>
         <br>
         <li><font face="Arial"><font color="#ffffff"><a href="http://prdownloads.sourceforge.net/vegastrike/vegastrike-0.2.1.tgz">
@@ -72,7 +72,7 @@ code:<br>
   and build the binary, or take the prebuilt binary (note, the prebuilt does
  not contain all the features found in the 0.2.1 source):<br>
         <br>
-        <li><font face="Arial"><font color="#ffffff"><a href="file:///home/daniel/vegastrike/vegastrike-0.2.0-x86-linux.tar.gz">
+        <li><font face="Arial"><font color="#ffffff"><a href="http://vegastrike.sourceforge.net/vegastrike-0.2.0-x86-linux.tar.gz">
    Vegastrike 0.2.0 Linux Binary</a>
      (1.6 M      needs glibc2.2)</font></font><br>
         </li>
@@ -91,8 +91,24 @@ code:<br>
    Vegastrike 0.2.0 RPMs for SuSE 7.3</a>
          (size about 30M) *thanks* to Stefan Dirsch</font></font></li>
         <br>
- Many distrobutions do not include the OpenAL library from lokigames (being 
-from lokigames it is no longer in developement).  You can get the whole OpenAL 
+
+  Debian package tree, built by Mike Furr:<br>
+        <br>
+        <li><font face="Arial"><font color="#ffffff"><a href="http://userpages.umbc.edu/~fu1/debian">
+   Vegastrike Debian package Tree</a>
+          *thanks* to Mike Furr</font></font></li>
+        <br>
+
+  another Debian package:<br>
+        <br>
+        <li><font face="Arial"><font color="#ffffff"><a href="http://stuffworkers.gotdns.org/vegastrike_0.2.0-15_i386.deb">
+   Vegastrike-0.2.0 Debian package</a>
+          *thanks* to Markus Pilman</font></font></li>
+        <br>
+
+
+ Many distrobutions do not include the OpenAL library from lokigames (being
+from lokigames it is no longer in developement).  You can get the whole OpenAL
 cvs as of Dec 2001 here if you cannot find it anywhere else.<br>
         <br>
         <li><font face="Arial"><font color="#ffffff"><a href="http://vegastrike.sourceforge.net/openal_source.tar.gz">
