@@ -1,3 +1,9 @@
+2002-04-24 Alexander Rawass <alexannika@users.sourceforge.net>
+
+	* added debian packages to homepage/doc
+	* fixed broken link on download page
+	
+
 2002-04-20 Daniel Horn <hellcatv@hotmail.com>
 	* Added flyto AI scripts
 	* Added _std.playSound ()
